# rust_wasm_helper_for_pwa

./: Cargo.toml  Makefile.toml  README.md  cache57.txt  lmakeversionfromdate.json
src/: lib.rs  prepare_zip_mod.rs  web_sys_mod.rs
tmp/: temp56.txt  temp57.txt
web_server_folder/rust_wasm_helper_for_pwa/: index.html  manifest.json  service_worker.js
web_server_folder/rust_wasm_helper_for_pwa/css/: rust_wasm_helper_for_pwa.css
web_server_folder/rust_wasm_helper_for_pwa/icons/: icon-original.pdn
