[package]
name = "rust_wasm_helper_for_pwa"
version = "2021.704.1351"
authors = ["Luciano Bestia <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "creates a minimal PWA you can copy to your project"
repository = "https://github.com/LucianoBestia/rust_wasm_helper_for_pwa_game"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["learning"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
unwrap = "1.2.1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
image = "0.23.12"
ico = "0.1.0"

[dependencies.zip]
version = "0.5.9"
default-features = false
features = ["deflate"]

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "Blob",
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "File",
  "FileList",
  "FileReader",
  "Headers",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlHtmlElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "ProgressEvent",
  "Response",
  "Screen",
  "Storage",
  "Url",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
panic = "abort"
